# nanoslide

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-CN.md  README.md  main.py  pyproject.toml
nanoslide/: main.py
nanoslide/prompts/: __init__.py  plan.py  slide.py  video.py
nanoslide/utils/: google_caller.py  io.py
