[project]
name = "nanoslide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.52.0",
    "pillow>=12.0.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
